--- a/packages/ui-library/README
+++ b/packages/ui-library/README
@@ -15,11 +15,12 @@ using postinstall script in package.json script
 integrate the library as git hosted npm module into the WP
 	assets to be copied to the WP assets directory
 
-fix the ES lint rules to match the jscs/jshint rules in the WP
-
 configure jest for code coverage w/ istanbul
 	https://facebook.github.io/jest/docs/api.html#config-collectcoverage-boolean
 enforce the code coverage in Jenkins
+
+include the main/demo file content into the index page
+include the relevant code from demo into the index page
 
 
 
