ID-2649 ID-2650 -- compile the SCSS through webpack when running the demo app
Change-Id: Idb56617552ca57729627dc3b1fb7ee564bf07603

--- a/packages/ui-library/README
+++ b/packages/ui-library/README
@@ -9,11 +9,9 @@ and open http://localhost:8080/index.html in the browser.
 TODO
 ====
 
-compile the SCSS/LESS/SASS from /css
-using postinstall script in package.json script
-
 integrate the library as git hosted npm module into the WP
 	assets to be copied to the WP assets directory
+	SCSS to be compiled through a maven plugin
 
 configure jest for code coverage w/ istanbul
 	https://facebook.github.io/jest/docs/api.html#config-collectcoverage-boolean
