add removed props to v3 release notes add a little more info the the removed components to the v3 docs
Change-Id: I492caf1a21d3f93508b6b48100c13b3fd446234c

--- a/packages/ui-library/src/demo/components/docs/release-notes/v3-0-0.md
+++ b/packages/ui-library/src/demo/components/docs/release-notes/v3-0-0.md
@@ -32,18 +32,28 @@
 
     - Components with a removed V1:
         - FileUpload
+            - src/components/forms/file-upload/v1.jsx
         - FormIntegerField
-        - FormSelectField
+            - src/components/forms/form-integer-field/v1.jsx
         - FormTextArea
+            - src/components/forms/form-text-area/v1.jsx
         - FormTextField
+            - src/components/forms/form-text-field/v1.jsx
         - SelectionList
+            - src/components/forms/selection-list/v1.jsx
         - Toggle
+            - src/components/forms/form-toggle/v1.jsx
         - I18nPhoneInput
+            - src/components/forms/i18n/phone-input/v1.jsx
         - ContextCloseButton
+            - src/components/general/context-close-button/v1.jsx
 
     - Other components that have also been removed:
-        - CollapsibleSection -> use Expandable Row instead
-        - FormDropdownList -> use FormSelectField instead
+        - CollapsibleSection → use Section instead
+            - src/components/general/CollapsibleSection.jsx
+        - FormSelectField → use FormDropdownList instead
+            - src/components/forms/form-select-field/*
+
 
 - **Changed Components**
     - Drag and Drop Components
@@ -55,6 +65,7 @@
             class DemoApp extends React.Component {};
             DemoApp = DragDropContext(HTML5Backend)(DemoApp);
             ```
+
         - The change affects codebases using the following components:
             - DragDragDrop
             - DragDropRow
@@ -66,12 +77,162 @@
 
 
 - **Removed Props**
-    - UI Library V2 also included warnings for deprecated props. The following props are deprecated in V3 and will result in an error being thrown:
-        - id has been changed to data-id,
-        - onChange has been changed to onValueChange
-        - isRequired has been changed to required
+    - UI Library V2 also included warnings for deprecated props. The following props are deprecated in V3 and will result in an error being thrown. In general the following has changed:
+        - controlled → stateless
+        - id → data-id
+        - isRequired → required
+        - onChange → onValueChange
 
-    - More documentation on deprecated props coming soon.
+    - Specifically the following pros has been removed:
+        - src/components/calendars/
+            - Calendar.jsx
+                - id → data-id
+                - isRequired → required
+                - onChange → onValueChange
+        - src/components/forms/
+            - file-upload/v2.jsx
+                - controlled → stateless
+                - title → labelText
+            - form-integer-field/v2.jsx
+                - controlled → stateless
+            - form-text-area/v2.jsx
+                - controlled → stateless
+            - form-text-field/v2.jsx
+                - controlled → stateless
+            - form-toggle/v2.jsx
+                - controlled → stateless
+                - id → data-id
+            - i18n/
+                - I18nCountrySelector.jsx
+                    - controlled → stateless
+                    - onCountrySearch → onSearch
+                - phone-input/v2.jsx
+                    - controlled → stateless
+                    - onCountrySearch → onSearch
+            - selection-list/v2.jsx
+                - controlled → stateless
+            - DropDownButton.jsx
+                - id → data-id
+                - controlled → stateless
+                - onSelect → onValueChange
+            - FormCheckbox.jsx
+                - id → data-id
+            - FormCheckboxList.jsx
+                - id → data-id
+                - controlled → stateless
+                - labelSelectAll → onGetSelectAllLabel
+                - labelDeselectAll → onGetDeselectAllLabel
+                - onSelectionChange → onValueChange
+            - FormLabel.jsx
+                - id → data-id
+            - FormRadioGroup.jsx
+                - id → data-id
+                - onChange → onValueChange
+            - FormTimeZone.jsx
+                - controlled → stateless
+            - Multivalues.jsx
+                - id → data-id
+                - isRequired → required
+                - onChange → onValueChange
+            - RockerButton.jsx
+                - id → data-id
+                - controlled → stateless
+                - onChange → onValueChange
+        - src/components/general/
+            - ColorPicker.jsx
+                - id → data-id
+                - controlled → stateless
+                - onChange → onValueChange
+            - ColumnLayout.jsx
+                - id → data-id
+            - ConditionalFieldset.jsx
+                - controlled → stateless
+            - EllipsisLoader.jsx
+                - id → data-id
+            - EllipsisLoaderButton.jsx
+                - id → data-id
+                - onButtonClick → onClick
+            - InlineMessage.jsx
+                - callback → onClick
+            - Messages.jsx
+                - id → data-id
+                - removeMessage → onRemoveMessage
+                - i18n → onI18n
+            - Modal.jsx
+                - id → data-id
+                - controlled → stateless
+                - activatorContainerStyle → activatorContainerClassName
+                - linkContent → activatorContent
+                - linkStyle → activatorContentClassName
+                - value → activatorButtonLabel
+                - buttonStyle → activatorButtonClassName
+                - containerStyle → className
+            - Section.jsx
+                - id → data-id
+                - controlled → stateless
+            - SelectText.jsx
+                - dataId → data-id
+            - Spinner.jsx
+                - id → data-id
+            - TabbedSections.jsx
+                - id → data-id
+                - onSectionChange → onValueChange
+            - TimePicker.jsx
+                - id → data-id
+        - src/components/grid/
+            - cells/
+                - ButtonCell.jsx
+                    - onCallBack → onGridCellAction
+                - CheckboxCell.jsx
+                    - onCallBack → onGridCellAction
+                - TextFieldCell.jsx
+                    - onCallBack → onGridCellAction
+            - Grid.jsx
+                - controlled → stateless
+        - src/components/list/
+            - InfiniteScroll.jsx
+                - loadPrev → onLoadPrev
+                - loadNext → onLoadNext
+                - headingGenerator → onGenerateHeading
+            - Pagination.jsx
+                - id → data-id
+                - controlled → stateless
+                - onChange → onValueChange
+        - src/components/panels/
+            - header-bar/HeaderBar.jsx
+                - label → siteTitle
+            - left-nav/LeftNavBar.jsx
+                - onSectionClick → onSectionValueChange
+                - onItemClick → onItemValueChange
+            - multi-drag/MultiDrag.jsx
+                - controlled → stateless
+        - src/components/rows/
+            - expandable-row/ExpandableRow.jsx
+                - controlled → stateless
+                - defaultToExpanded → expanded
+        - src/components/tooltips/
+            - DetailsTooltip.jsx
+                - id → data-id
+                - controlled → stateless
+                - contentClassNames → contentClassName
+                - titleClassNames → titleClassName
+                - labelStyle → labelClassName
+                - positionStyle → positionClassName
+            - HelpHint.jsx
+                - id → data-id
+        - src/components/wizard/
+            - Choose.jsx
+                - id → data-id
+                - onChange → onValueChange
+            - Progress.jsx
+                - id → data-id
+            - Step.jsx
+                - id → data-id
+                - nextButtonStyle → nextButtonClassName
+                - doneButtonStyle → doneButtonClassName
+            - Wizard.jsx
+                - id → data-id
+                - onChange → onValueChange
 
 
 ### Upgrading React
