update error thrown for props
Change-Id: I68fafe69bed8285ce5d7fb36037a78a5da19d94c

--- a/packages/ui-library/src/demo/components/docs/release-notes/v3-0-0.md
+++ b/packages/ui-library/src/demo/components/docs/release-notes/v3-0-0.md
@@ -79,11 +79,14 @@
 - **Removed Props**
     - UI Library V2 also included warnings for deprecated props. The following props are deprecated in V3 and will result in an error being thrown. In general the following has changed:
         - controlled → stateless
+            - we've updated this because stateless is more descriptive than controlled. Your prop value will stay the same e.g. (`controlled={true}` simply becomes `stateless={true}`))
         - id → data-id
         - isRequired → required
         - onChange → onValueChange
 
-    - Specifically the following pros has been removed:
+<details>
+    <summary><a>Click here to expand and see the specifics props removed in each component.</a></summary>
+    ```
         - src/components/calendars/
             - Calendar.jsx
                 - id → data-id
@@ -233,7 +236,8 @@
             - Wizard.jsx
                 - id → data-id
                 - onChange → onValueChange
-
+```
+</details>
 
 ### Upgrading React
 - **React 16**
