update delete tooltip
Change-Id: I205ce0b575b4e1693c6ed932cb7b0a21a93114ef

--- a/packages/ui-library/src/util/i18n/lang/en_us.json
+++ b/packages/ui-library/src/util/i18n/lang/en_us.json
@@ -250,6 +250,6 @@
     "undo": "Undo",
     "next": "Next",
     "done": "Done",
-    "edit": "Edit"
+    "edit": "Edit",
+    "delete": "Delete"
 }
-
