--- a/packages/ui-library/src/demo/components/docs/release-notes/v3-0-0.md
+++ b/packages/ui-library/src/demo/components/docs/release-notes/v3-0-0.md
@@ -1,58 +1,46 @@
 ### New Environment Requirements
 
 - **React**
-    - UI Library V3 is designed for use with React 16, but also supports React 15.6.2.  Both are now available under with the new MIT license.
+    - UI Library V3 is designed for use with React 16, but also supports React 15.  Both React 16 and React 15.6.2 are now available under with the new MIT license.
 
     - See **upgrading react** below for more information.
 
 - **Babel**
-    - Presets
-        - The UI Library now supports transpiling of the latest ES versions supported by Babel.  The preset used is `“env”` with no specific configuration options set. This preset replaces the “latest” preset from Babel. You may specify your own environment options as needed. https://babeljs.io/docs/plugins/preset-env/
+    - The UI Library now transpiles its source code before shipping. This frees projects from transpiling the library for compiliation and testing. However, this means the paths have changed, and the files extensions are .js rather than .jsx.
+    - Remove the UI Library transpiling from your gulpfile or webpack config file as well as your jest preproccessor.
+    <p class="attention"> - In order for compilation and tests to work, find and replace <strong>ui-library/src</strong> with <strong>ui-library/lib</strong> in your import statements.</br>- Remove .jsx at the from the component name in the file path if it exists.
+    </p>
 
-    - Plugins
-        - The UI Library uses ES7+ Property Initializers to bind functions to class instances, removing the need for constructor binding. This requires the babel plugin `“transform class properties”`.
-    https://babeljs.io/docs/plugins/transform-class-properties/
-
-    - Below is the UI Library .babelrc with the minimum requirements to use the library
-    ```
-        {
-        	"presets": [
-                "env",
-                "react"
-            ],
-            "plugins": [
-                "transform-class-properties"
-            ]
-        }
-    ```
 
 ### Breaking Changes
+- **File paths and extensions**
+    - If you missed the above message, read it again. File paths have changed.
 - **Removed Components**
     - UI Library V2 included deprecation warnings for specific components, mostly regarding components marked as V1. These have been removed.
 
     - Components with a removed V1:
         - FileUpload
-            - src/components/forms/file-upload/v1.jsx
+            - lib/components/forms/file-upload/v1
         - FormIntegerField
-            - src/components/forms/form-integer-field/v1.jsx
+            - lib/components/forms/form-integer-field/v1
         - FormTextArea
-            - src/components/forms/form-text-area/v1.jsx
+            - lib/components/forms/form-text-area/v1
         - FormTextField
-            - src/components/forms/form-text-field/v1.jsx
+            - lib/components/forms/form-text-field/v1
         - SelectionList
-            - src/components/forms/selection-list/v1.jsx
+            - lib/components/forms/selection-list/v1
         - Toggle
-            - src/components/forms/form-toggle/v1.jsx
+            - lib/components/forms/form-toggle/v1
         - I18nPhoneInput
-            - src/components/forms/i18n/phone-input/v1.jsx
+            - lib/components/forms/i18n/phone-input/v1
         - ContextCloseButton
-            - src/components/general/context-close-button/v1.jsx
+            - lib/components/general/context-close-button/v1
 
     - Other components that have also been removed:
         - CollapsibleSection → use Section instead
-            - src/components/general/CollapsibleSection.jsx
+            - lib/components/general/CollapsibleSection
         - FormSelectField → use FormDropdownList instead
-            - src/components/forms/form-select-field/*
+            - lib/components/forms/form-select-field/*
 
 
 - **Changed Components**
@@ -87,81 +75,81 @@
 <details>
     <summary><a>Click here to expand and see the specifics props removed in each component.</a></summary>
     ```
-        - src/components/calendars/
-            - Calendar.jsx
+        - lib/components/calendars/
+            - Calendar
                 - id → data-id
                 - isRequired → required
                 - onChange → onValueChange
-        - src/components/forms/
-            - file-upload/v2.jsx
+        - lib/components/forms/
+            - file-upload/v2
                 - controlled → stateless
                 - title → labelText
-            - form-integer-field/v2.jsx
+            - form-integer-field/v2
                 - controlled → stateless
-            - form-text-area/v2.jsx
+            - form-text-area/v2
                 - controlled → stateless
-            - form-text-field/v2.jsx
+            - form-text-field/v2
                 - controlled → stateless
-            - form-toggle/v2.jsx
+            - form-toggle/v2
                 - controlled → stateless
                 - id → data-id
             - i18n/
-                - I18nCountrySelector.jsx
+                - I18nCountrySelector
                     - controlled → stateless
                     - onCountrySearch → onSearch
-                - phone-input/v2.jsx
+                - phone-input/v2
                     - controlled → stateless
                     - onCountrySearch → onSearch
-            - selection-list/v2.jsx
+            - selection-list/v2
                 - controlled → stateless
-            - DropDownButton.jsx
+            - DropDownButton
                 - id → data-id
                 - controlled → stateless
                 - onSelect → onValueChange
-            - FormCheckbox.jsx
+            - FormCheckbox
                 - id → data-id
-            - FormCheckboxList.jsx
+            - FormCheckboxList
                 - id → data-id
                 - controlled → stateless
                 - labelSelectAll → onGetSelectAllLabel
                 - labelDeselectAll → onGetDeselectAllLabel
                 - onSelectionChange → onValueChange
-            - FormLabel.jsx
+            - FormLabel
                 - id → data-id
-            - FormRadioGroup.jsx
+            - FormRadioGroup
                 - id → data-id
                 - onChange → onValueChange
-            - FormTimeZone.jsx
+            - FormTimeZone
                 - controlled → stateless
-            - Multivalues.jsx
+            - Multivalues
                 - id → data-id
                 - isRequired → required
                 - onChange → onValueChange
-            - RockerButton.jsx
+            - RockerButton
                 - id → data-id
                 - controlled → stateless
                 - onChange → onValueChange
-        - src/components/general/
-            - ColorPicker.jsx
+        - lib/components/general/
+            - ColorPicker
                 - id → data-id
                 - controlled → stateless
                 - onChange → onValueChange
-            - ColumnLayout.jsx
+            - ColumnLayout
                 - id → data-id
-            - ConditionalFieldset.jsx
+            - ConditionalFieldset
                 - controlled → stateless
-            - EllipsisLoader.jsx
+            - EllipsisLoader
                 - id → data-id
-            - EllipsisLoaderButton.jsx
+            - EllipsisLoaderButton
                 - id → data-id
                 - onButtonClick → onClick
-            - InlineMessage.jsx
+            - InlineMessage
                 - callback → onClick
-            - Messages.jsx
+            - Messages
                 - id → data-id
                 - removeMessage → onRemoveMessage
                 - i18n → onI18n
-            - Modal.jsx
+            - Modal
                 - id → data-id
                 - controlled → stateless
                 - activatorContainerStyle → activatorContainerClassName
@@ -170,70 +158,70 @@
                 - value → activatorButtonLabel
                 - buttonStyle → activatorButtonClassName
                 - containerStyle → className
-            - Section.jsx
+            - Section
                 - id → data-id
                 - controlled → stateless
-            - SelectText.jsx
+            - SelectText
                 - dataId → data-id
-            - Spinner.jsx
+            - Spinner
                 - id → data-id
-            - TabbedSections.jsx
+            - TabbedSections
                 - id → data-id
                 - onSectionChange → onValueChange
-            - TimePicker.jsx
+            - TimePicker
                 - id → data-id
-        - src/components/grid/
+        - lib/components/grid/
             - cells/
-                - ButtonCell.jsx
+                - ButtonCell
                     - onCallBack → onGridCellAction
-                - CheckboxCell.jsx
+                - CheckboxCell
                     - onCallBack → onGridCellAction
-                - TextFieldCell.jsx
+                - TextFieldCell
                     - onCallBack → onGridCellAction
-            - Grid.jsx
+            - Grid
                 - controlled → stateless
-        - src/components/list/
-            - InfiniteScroll.jsx
+        - lib/components/list/
+            - InfiniteScroll
                 - loadPrev → onLoadPrev
                 - loadNext → onLoadNext
                 - headingGenerator → onGenerateHeading
-            - Pagination.jsx
+            - Pagination
                 - id → data-id
                 - controlled → stateless
                 - onChange → onValueChange
-        - src/components/panels/
-            - header-bar/HeaderBar.jsx
+        - lib/components/panels/
+            - header-bar/HeaderBar
                 - label → siteTitle
-            - left-nav/LeftNavBar.jsx
+            - left-nav/LeftNavBar
                 - onSectionClick → onSectionValueChange
                 - onItemClick → onItemValueChange
-            - multi-drag/MultiDrag.jsx
+            - multi-drag/MultiDrag
                 - controlled → stateless
-        - src/components/rows/
-            - expandable-row/ExpandableRow.jsx
+        - lib/components/rows/
+            - expandable-row/ExpandableRow
                 - controlled → stateless
                 - defaultToExpanded → expanded
-        - src/components/tooltips/
-            - DetailsTooltip.jsx
+        - lib/components/tooltips/
+            - DetailsTooltip
                 - id → data-id
                 - controlled → stateless
                 - contentClassNames → contentClassName
                 - titleClassNames → titleClassName
                 - labelStyle → labelClassName
                 - positionStyle → positionClassName
-            - HelpHint.jsx
+            - HelpHint
                 - id → data-id
-        - src/components/wizard/
-            - Choose.jsx
+        - lib/components/wizard/
+            - Choose
                 - id → data-id
                 - onChange → onValueChange
-            - Progress.jsx
+            - Progress
                 - id → data-id
-            - Step.jsx
+            - Step
                 - id → data-id
                 - nextButtonStyle → nextButtonClassName
                 - doneButtonStyle → doneButtonClassName
-            - Wizard.jsx
+            - Wizard
                 - id → data-id
                 - onChange → onValueChange
 ```
