update the v3.1 release notes
Change-Id: If4991c318226e69cf56fdb0742f44e20c271fc8a

--- a/packages/ui-library/src/demo/components/docs/release-notes/v3-1-0.md
+++ b/packages/ui-library/src/demo/components/docs/release-notes/v3-1-0.md
@@ -1,10 +1,21 @@
 
-### Small Bug Fixes
+### Smaller bug fixes and feature requests
 
-A number of small bug fixes were included in this release, most fixing issues on the UI Library demo site itself.  
-Fixes to the Library components are:
+A number of smaller bug fixes and feature requests were included in this release, some fixing issues on the UI Library demo site itself.  The items included in this release are as follows:
 
 - [UIP-1364](https://jira.pingidentity.com/browse/UIP-1364) : Add toggle value to the onToggle callback
+- [UIP-1370](https://jira.pingidentity.com/browse/UIP-1370) : ExpandableRow title and subtitle are wrapped instead of trimmed when expanded
+- [UIP-1376](https://jira.pingidentity.com/browse/UIP-1376) : Expanded rows: dealing with long titles
+- [UIP-1387](https://jira.pingidentity.com/browse/UIP-1387) : Fix for several demos after latest UI Library upgrades.
+- [UIP-1388](https://jira.pingidentity.com/browse/UIP-1388) : Fix warnings in Tuts section on demo site
+- [UIP-1389](https://jira.pingidentity.com/browse/UIP-1389) : Fix demo file parsing error in demo site
 - [UIP-1390](https://jira.pingidentity.com/browse/UIP-1390) : Fix country selector flag - not displaying
+- [UIP-1397](https://jira.pingidentity.com/browse/UIP-1397) : Add import path to documentation pages of components
+- [UIP-1398](https://jira.pingidentity.com/browse/UIP-1398) : Popover Menu Component
+- [UIP-1399](https://jira.pingidentity.com/browse/UIP-1399) : Remaining styling for API client config
+- [UIP-1403](https://jira.pingidentity.com/browse/UIP-1403) : Fix Z-index issues for the Expandable Row Accessories
+- [UIP-1404](https://jira.pingidentity.com/browse/UIP-1404) : Create a 100% width input
+- [UIP-1406](https://jira.pingidentity.com/browse/UIP-1406) : Wizard: Cancel button should be gray cancel style
+- [UIP-1407](https://jira.pingidentity.com/browse/UIP-1407) : Add styled HR tag
 
-[A complete list of all issues fixed can be viewed here.](https://jira.pingidentity.com/issues/?jql=project%20%3D%20UIP%20AND%20fixVersion%20%3D%203.1.0%20)
+[More information for each item can be viewed here.](https://jira.pingidentity.com/issues/?jql=project%20%3D%20UIP%20AND%20fixVersion%20%3D%203.1.0%20)
