--- a/packages/end-user/src/demo/Catalog.mdx
+++ b/packages/end-user/src/demo/Catalog.mdx
@@ -27,6 +27,11 @@ The logo that sits atop the form.
     <TextInput id="username"/>
 </ComponentDemo>
 
+### Error state
+<ComponentDemo>
+    <TextInput id="username" error/>
+</ComponentDemo>
+
 <ComponentDemo>
     <FloatLabelTextInput label="Username" id="username"/>
 </ComponentDemo>
@@ -37,10 +42,14 @@ The logo that sits atop the form.
 
 ## Button
 
-The submit button for the form.
-
+### The submit button for the form.
 <ComponentDemo>
     <Button label="push it" primary/>
+</ComponentDemo>
+
+### Disabled primary button
+<ComponentDemo>
+    <Button label="push it" primary disabled/>
 </ComponentDemo>
 
 ## Card
