--- a/packages/end-user/src/demo/Catalog.mdx
+++ b/packages/end-user/src/demo/Catalog.mdx
@@ -88,6 +88,19 @@ Cards sit above the customized background and contain all our UI elements.
     </Card>
 </ComponentDemo>
 
+### Another logo
+<ComponentDemo>
+    <Card>
+        <Stack header={true}>
+            <Logo src="demo/assets/jj-logo.png"/>
+            <FloatLabelTextInput label="Username" id="username"/>
+            <FloatLabelPasswordInput label="Password" id="password"/>
+            <Checkbox label="Remember me"/>
+            <Button label="Sign On" primary/>
+        </Stack>
+    </Card>
+</ComponentDemo>
+
 ## Feedback Messages
 
 Error message
