--- a/packages/end-user/src/demo/Catalog.mdx
+++ b/packages/end-user/src/demo/Catalog.mdx
@@ -68,7 +68,7 @@ Cards sit above the customized background and contain all our UI elements.
             <Logo src="demo/assets/ping-logo.svg"/>
             <FloatLabelTextInput label="Username" id="username"/>
             <FloatLabelPasswordInput label="Password" id="password"/>
-            <Checkbox label="Remember me"/>
+            <div><Checkbox label="Remember me"/></div>
             <Button label="Sign On" primary/>
         </Stack>
     </Card>
@@ -82,7 +82,7 @@ Cards sit above the customized background and contain all our UI elements.
             <Feedback type="error">Cannot sign on. There is a problem with either your username or password.</Feedback>
             <FloatLabelTextInput label="Username" id="username"/>
             <FloatLabelPasswordInput label="Password" id="password"/>
-            <Checkbox label="Remember me"/>
+            <div><Checkbox label="Remember me"/></div>
             <Button label="Sign On" primary/>
         </Stack>
     </Card>
@@ -95,7 +95,7 @@ Cards sit above the customized background and contain all our UI elements.
             <Logo src="demo/assets/jj-logo.png"/>
             <FloatLabelTextInput label="Username" id="username"/>
             <FloatLabelPasswordInput label="Password" id="password"/>
-            <Checkbox label="Remember me"/>
+            <div><Checkbox label="Remember me"/></div>
             <Button label="Sign On" primary/>
         </Stack>
     </Card>
