--- a/packages/end-user/src/demo/Catalog.mdx
+++ b/packages/end-user/src/demo/Catalog.mdx
@@ -6,7 +6,7 @@ import FloatLabelPasswordInput from "../components/FloatLabelPasswordInput";
 import FloatLabelTextInput from "../components/FloatLabelTextInput";
 import TextInput from "../components/TextInput";
 import Logo from "../components/Logo";
-import Stack from "../components/Stack";
+import Form from "../components/Form";
 import ComponentDemo from "./components/ComponentDemo";
 
 # Ping End-User Components
@@ -64,40 +64,40 @@ Cards sit above the customized background and contain all our UI elements.
 
 <ComponentDemo>
     <Card>
-        <Stack header={true}>
             <Logo src="demo/assets/ping-logo.svg"/>
+        <Form>
             <FloatLabelTextInput label="Username" id="username"/>
             <FloatLabelPasswordInput label="Password" id="password"/>
             <div><Checkbox label="Remember me"/></div>
             <Button label="Sign On" primary/>
-        </Stack>
+        </Form>
     </Card>
 </ComponentDemo>
 
 ### With an error
 <ComponentDemo>
     <Card>
-        <Stack header={true}>
-            <Logo src="demo/assets/ping-logo.svg"/>
+        <Logo src="demo/assets/ping-logo.svg"/>
+        <Form>
             <Feedback type="error">Cannot sign on. There is a problem with either your username or password.</Feedback>
             <FloatLabelTextInput label="Username" id="username"/>
             <FloatLabelPasswordInput label="Password" id="password"/>
             <div><Checkbox label="Remember me"/></div>
             <Button label="Sign On" primary/>
-        </Stack>
+        </Form>
     </Card>
 </ComponentDemo>
 
 ### Another logo
 <ComponentDemo>
     <Card>
-        <Stack header={true}>
-            <Logo src="demo/assets/jj-logo.png"/>
+        <Logo src="demo/assets/jj-logo.png"/>
+        <Form>
             <FloatLabelTextInput label="Username" id="username"/>
             <FloatLabelPasswordInput label="Password" id="password"/>
             <div><Checkbox label="Remember me"/></div>
             <Button label="Sign On" primary/>
-        </Stack>
+        </Form>
     </Card>
 </ComponentDemo>
 
