Reorganized how you add pages/routes.

--- a/packages/end-user/src/demo/Catalog.mdx
+++ b/packages/end-user/src/demo/Catalog.mdx
@@ -18,7 +18,7 @@ This is a catalog of components.
 The logo that sits atop the form.
 
 <ComponentDemo>
-    <Logo src="demo/assets/ping-logo.svg"/>
+    <Logo src="ping-logo.svg"/>
 </ComponentDemo>
 
 ## Inputs
@@ -64,7 +64,7 @@ Cards sit above the customized background and contain all our UI elements.
 
 <ComponentDemo>
     <Card>
-            <Logo src="demo/assets/ping-logo.svg"/>
+            <Logo src="ping-logo.svg"/>
         <Form>
             <FloatLabelTextInput label="Username" id="username"/>
             <FloatLabelPasswordInput label="Password" id="password"/>
@@ -77,7 +77,7 @@ Cards sit above the customized background and contain all our UI elements.
 ### With an error
 <ComponentDemo>
     <Card>
-        <Logo src="demo/assets/ping-logo.svg"/>
+        <Logo src="ping-logo.svg"/>
         <Form>
             <Feedback type="error">Cannot sign on. There is a problem with either your username or password.</Feedback>
             <FloatLabelTextInput label="Username" id="username"/>
@@ -91,7 +91,7 @@ Cards sit above the customized background and contain all our UI elements.
 ### Another logo
 <ComponentDemo>
     <Card>
-        <Logo src="demo/assets/jj-logo.png"/>
+        <Logo src="jj-logo.png"/>
         <Form>
             <FloatLabelTextInput label="Username" id="username"/>
             <FloatLabelPasswordInput label="Password" id="password"/>
@@ -107,4 +107,8 @@ Error message
 
 <ComponentDemo>
     <Feedback type="error">Cannot sign on. There is a problem with either your username or password.</Feedback>
+</ComponentDemo>
+
+<ComponentDemo>
+    <Feedback type="warning">Your password has expired. Please create a new one.</Feedback>
 </ComponentDemo>
