--- a/packages/end-user/src/demo/Catalog.mdx
+++ b/packages/end-user/src/demo/Catalog.mdx
@@ -43,6 +43,11 @@ The logo that sits atop the form.
     <TextInput id="username" error/>
 </ComponentDemo>
 
+### Success state
+<ComponentDemo>
+    <TextInput id="username" success/>
+</ComponentDemo>
+
 <ComponentDemo>
     <FloatLabelTextInput label="Username" id="username"/>
 </ComponentDemo>
@@ -89,8 +94,8 @@ Cards sit above the customized background and contain all our UI elements.
 <ComponentDemo>
     <Card>
         <Logo src="ping-logo.svg"/>
+        <Feedback type="error">Cannot sign on. There is a problem with either your username or password.</Feedback>
         <Form>
-            <Feedback type="error">Cannot sign on. There is a problem with either your username or password.</Feedback>
             <FloatLabelTextInput label="Username" id="username"/>
             <FloatLabelPasswordInput label="Password" id="password"/>
             <div><Checkbox label="Remember me"/></div>
@@ -123,6 +128,18 @@ Cards sit above the customized background and contain all our UI elements.
             <Button label="Sign On" primary disabled/>
         </Form>
         <TextBlock size="small">Not Cindy Lou? <a href="#">Switch Accounts</a></TextBlock>
+    </Card>
+</ComponentDemo>
+
+### Reset password
+<ComponentDemo>
+    <Card>
+        <Logo src="ping-logo.svg"/>
+        <Feedback type="error">Too many unsuccessful sign-on attempts. Please reset your password.</Feedback>
+        <Form>
+            <Button label="Reset Password" primary/>
+        </Form>
+        <TextBlock size="small">No account? <a href="#">Register Now</a></TextBlock>
     </Card>
 </ComponentDemo>
 
