update release notes
Change-Id: Ia48efd46dc80acde9e3c2a45893930abead01eac

--- a/packages/ui-library/src/demo/components/docs/release-notes/v3-3-0.md
+++ b/packages/ui-library/src/demo/components/docs/release-notes/v3-3-0.md
@@ -1,1 +1,18 @@
-- [UIP-1449](https://jira.pingidentity.com/browse/UIP-UIP-1449) : Design and functionality enhancements to the multi-drag component.
+- [UIP-1395 New Wizard](https://jira.pingidentity.com/browse/UIP-1395)
+- [UIP-1411 Add HTML/CSS to support icon-bulleted lists](https://jira.pingidentity.com/browse/UIP-1411)
+- [UIP-1412 Add ability to have a link next to a radio input](https://jira.pingidentity.com/browse/UIP-1412)
+- [UIP-1414 Added Section component functionality / changed styling](https://jira.pingidentity.com/browse/UIP-1414)
+- [UIP-1428 Add ordering mode to expandable row](https://jira.pingidentity.com/browse/UIP-1428)
+- [UIP-1429 Align the HeaderBar and LeftNav prop names with the Icon prop names](https://jira.pingidentity.com/browse/UIP-1429)
+- [UIP-1434 Demo site nav: move some components out of "Misc", rename it to "General"](https://jira.pingidentity.com/browse/UIP-1434)
+- [UIP-1437 cosmetic: need guidance for fixing cosmetic issues with Platform2 Population list](https://jira.pingidentity.com/browse/UIP-1437)
+- [UIP-1438 cosmetic: need guidance for fixing cosmetic issues with Platform2 Password Policies view](https://jira.pingidentity.com/browse/UIP-1438)
+- [UIP-1439 Indent Component Fixes](https://jira.pingidentity.com/browse/UIP-1439)
+- [UIP-1446 Create new tile selector component](https://jira.pingidentity.com/browse/UIP-1446)
+- [UIP-1448 Create a variation of the existing MultiValue input component](https://jira.pingidentity.com/browse/UIP-1448)
+- [UIP-1449 Design and functionality enhancements to the multi-drag component.](https://jira.pingidentity.com/browse/UIP-1449)
+- [UIP-1450 Create a new searchBar component with updated styles](https://jira.pingidentity.com/browse/UIP-1450)
+- [UIP-1451 Create a new obfuscated text component](https://jira.pingidentity.com/browse/UIP-1451)
+- [UIP-1463 Fix Tile Selector for IE](https://jira.pingidentity.com/browse/UIP-1463)
+- [UIP-1464 Initial click on selected, but unopened section after page-load triggers error](https://jira.pingidentity.com/browse/UIP-1464)
+- [UIP-1471 AppFrame not passing ids for header nav to header bar](https://jira.pingidentity.com/browse/UIP-1471)
