UIP-1482 Added way to call addMessage action that lets you set isHtml
Change-Id: Ifd441d1eb3bbcc5d80a52d411fad494a65449493

--- a/packages/ui-library/src/demo/components/docs/release-notes/v3-4-0.md
+++ b/packages/ui-library/src/demo/components/docs/release-notes/v3-4-0.md
@@ -1,1 +1,2 @@
 - [UIP-1476 Add name attribute to all form inputs](https://jira.pingidentity.com/browse/UIP-1476)
+- [UIP-1482 Support HTML in page messages](https://jira.pingidentity.com/browse/UIP-1482)
