UIP-1489 fixed data-id for TileSelector
Change-Id: I7c2e40077c4147116b27fb9f24a7710bda0cdc62

--- a/packages/ui-library/src/demo/components/docs/release-notes/v3-4-0.md
+++ b/packages/ui-library/src/demo/components/docs/release-notes/v3-4-0.md
@@ -1,2 +1,3 @@
 - [UIP-1476 Add name attribute to all form inputs](https://jira.pingidentity.com/browse/UIP-1476)
 - [UIP-1482 Support HTML in page messages](https://jira.pingidentity.com/browse/UIP-1482)
+- [UIP-1489 Fix data-id handling on TileSelector component](https://jira.pingidentity.com/browse/UIP-1489)
