UIP-1466 Read Only text field style
Change-Id: Ie6bffc7910bd0f141f454cbc417980d9cd90da34

--- a/packages/ui-library/src/demo/components/docs/release-notes/v3-4-0.md
+++ b/packages/ui-library/src/demo/components/docs/release-notes/v3-4-0.md
@@ -1,3 +1,4 @@
+- [UIP-1466 Read Only text field style](https://jira.pingidentity.com/browse/UIP-1466)
 - [UIP-1476 Add name attribute to all form inputs](https://jira.pingidentity.com/browse/UIP-1476)
 - [UIP-1482 Support HTML in page messages](https://jira.pingidentity.com/browse/UIP-1482)
 - [UIP-1483 Fix documentation and code examples for the new Wizard and Tile Selector components](https://jira.pingidentity.com/browse/UIP-1483)
