--- a/packages/end-user/src/demo/Catalog.mdx
+++ b/packages/end-user/src/demo/Catalog.mdx
@@ -5,10 +5,14 @@ import Feedback from "../components/Feedback";
 import FloatLabelPasswordInput from "../components/FloatLabelPasswordInput";
 import FloatLabelTextInput from "../components/FloatLabelTextInput";
 import Form from "../components/Form";
+import FormAside from "../components/FormAside";
 import Heading from "../components/Heading";
+import IconFeedback from "../components/IconFeedback";
 import Logo from "../components/Logo";
+import ModalMenu from "../components/ModalMenu";
 import Requirements from "../components/Requirements";
 import Spinner from "../components/Spinner";
+import Stack from "../components/Stack";
 import TextBlock from "../components/TextBlock";
 import TextInput from "../components/TextInput";
 import Tooltip from "../components/Tooltip";
@@ -50,6 +54,12 @@ The logo that sits atop the form.
     <TextInput id="username3" success/>
 </ComponentDemo>
 
+### Primary input
+
+<ComponentDemo>
+    <TextInput id="primary" defaultValue="495837" primary/>
+</ComponentDemo>
+
 ### Float Label Inputs
 
 <ComponentDemo>
@@ -68,7 +78,12 @@ IE & Edge don't support the CSS-only solution for float labels, but we can simul
 
 ## Button
 
-### The submit button for the form.
+### Standard button. Used for secondary actions.
+<ComponentDemo>
+    <Button label="Do something normal" />
+</ComponentDemo>
+
+### The submit button for the form. There should only be one of these blue primary buttons per page.
 <ComponentDemo>
     <Button label="push it" primary/>
 </ComponentDemo>
@@ -76,6 +91,11 @@ IE & Edge don't support the CSS-only solution for float labels, but we can simul
 ### Disabled primary button
 <ComponentDemo>
     <Button label="push it" primary disabled/>
+</ComponentDemo>
+
+### Third-level button.
+<ComponentDemo>
+    <Button label="Change" tertiary/>
 </ComponentDemo>
 
 ## Card
@@ -92,8 +112,8 @@ Cards sit above the customized background and contain all our UI elements.
     <Card>
             <Logo src="ping-logo.svg"/>
         <Form>
-            <FloatLabelTextInput label="Username" id="username"/>
-            <FloatLabelPasswordInput label="Password" id="password"/>
+            <FloatLabelTextInput label="Username" id="username6"/>
+            <FloatLabelPasswordInput label="Password" id="password2"/>
             <div><Checkbox label="Remember me"/></div>
             <Button label="Sign On" primary/>
         </Form>
@@ -106,8 +126,8 @@ Cards sit above the customized background and contain all our UI elements.
         <Logo src="ping-logo.svg"/>
         <Feedback type="error">Cannot sign on. There is a problem with either your username or password.</Feedback>
         <Form>
-            <FloatLabelTextInput label="Username" id="username"/>
-            <FloatLabelPasswordInput label="Password" id="password"/>
+            <FloatLabelTextInput label="Username" id="username7"/>
+            <FloatLabelPasswordInput label="Password" id="password3"/>
             <div><Checkbox label="Remember me"/></div>
             <Button label="Sign On" primary/>
         </Form>
@@ -119,8 +139,8 @@ Cards sit above the customized background and contain all our UI elements.
     <Card>
         <Logo src="jj-logo.png"/>
         <Form>
-            <FloatLabelTextInput label="Username" id="username"/>
-            <FloatLabelPasswordInput label="Password" id="password"/>
+            <FloatLabelTextInput label="Username" id="username8"/>
+            <FloatLabelPasswordInput label="Password" id="password4"/>
             <div><Checkbox label="Remember me"/></div>
             <Button label="Sign On" primary/>
         </Form>
@@ -134,7 +154,7 @@ Cards sit above the customized background and contain all our UI elements.
         <Heading>Hello Cindy Lou Who,</Heading>
         <TextBlock>Please enter your password below:</TextBlock>
         <Form>
-            <FloatLabelPasswordInput label="Password" id="password"/>
+            <FloatLabelPasswordInput label="Password" id="password5"/>
             <Button label="Sign On" primary disabled/>
         </Form>
         <TextBlock size="small">Not Cindy Lou? <a href="#">Switch Accounts</a></TextBlock>
@@ -163,6 +183,11 @@ Error message
 
 <ComponentDemo>
     <Feedback type="alert">Your password has expired. Please create a new one.</Feedback>
+</ComponentDemo>
+
+## Icon Feedback
+<ComponentDemo>
+    <IconFeedback type="success">Authenticated</IconFeedback>
 </ComponentDemo>
 
 ## Password Requirements
@@ -196,4 +221,31 @@ Error message
 
 <ComponentDemo>
     <Spinner/>
+</ComponentDemo>
+
+## Modal Menu
+
+<ComponentDemo>
+    <div
+        style={{
+            height: 400,
+            position: 'relative'
+        }}
+    >
+        <ModalMenu options={[
+            {
+                id: "sms",
+                label: "SMS",
+                sublabel: "+972 3xx-xxx-x03",
+                icon: "sms",
+                selected: true
+            },
+            {
+                id: "email",
+                label: "Email",
+                sublabel: "adxxxx@pingidentity.com",
+                icon: "email"
+            }
+        ]} />
+    </div>
 </ComponentDemo>
